--- a/Code/qtiplot/MantidQt/CustomInterfaces/inc/indirectAnalysis.ui
+++ b/Code/qtiplot/MantidQt/CustomInterfaces/inc/indirectAnalysis.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>367</width>
-    <height>288</height>
+    <width>442</width>
+    <height>286</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -145,56 +145,28 @@
        <item>
         <layout class="QGridLayout" name="fury_layoutFiles" >
          <item row="0" column="0" >
-          <widget class="QLabel" name="fury_lbIcon" >
-           <property name="text" >
+          <widget class="MantidQt::MantidWidgets::MWRunFiles" name="fury_iconFile" >
+           <property name="findRunFiles" stdset="0" >
+            <bool>false</bool>
+           </property>
+           <property name="label" stdset="0" >
             <string>ICON File</string>
+           </property>
+           <property name="multipleFiles" stdset="0" >
+            <bool>false</bool>
            </property>
           </widget>
          </item>
          <item row="1" column="0" >
-          <widget class="QLabel" name="fury_lbRes" >
-           <property name="text" >
+          <widget class="MantidQt::MantidWidgets::MWRunFiles" name="fury_resFile" >
+           <property name="findRunFiles" stdset="0" >
+            <bool>false</bool>
+           </property>
+           <property name="label" stdset="0" >
             <string>RES File</string>
            </property>
-          </widget>
-         </item>
-         <item row="0" column="1" >
-          <widget class="QLineEdit" name="fury_leIconFile" />
-         </item>
-         <item row="1" column="1" >
-          <widget class="QLineEdit" name="fury_leResFile" />
-         </item>
-         <item row="0" column="3" >
-          <widget class="QPushButton" name="fury_pbBrowseIcon" >
-           <property name="text" >
-            <string>Browse</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="3" >
-          <widget class="QPushButton" name="fury_pbBrowseRes" >
-           <property name="text" >
-            <string>Browse</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="2" >
-          <widget class="QLabel" name="fury_valIconFile" >
-           <property name="styleSheet" >
-            <string notr="true" >color: rgb(255, 0, 0);</string>
-           </property>
-           <property name="text" >
-            <string>*</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="2" >
-          <widget class="QLabel" name="fury_valResFile" >
-           <property name="styleSheet" >
-            <string notr="true" >color: rgb(255, 0, 0);</string>
-           </property>
-           <property name="text" >
-            <string>*</string>
+           <property name="multipleFiles" stdset="0" >
+            <bool>false</bool>
            </property>
           </widget>
          </item>
@@ -336,35 +308,17 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_3" >
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_2" >
-         <item>
-          <widget class="QLabel" name="elwin_lbInput" >
-           <property name="text" >
-            <string>Input File</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLineEdit" name="elwin_leInputFile" />
-         </item>
-         <item>
-          <widget class="QLabel" name="elwin_valFile" >
-           <property name="styleSheet" >
-            <string notr="true" >color: rgb(255, 0, 0);</string>
-           </property>
-           <property name="text" >
-            <string>*</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="elwin_pbBrowse" >
-           <property name="text" >
-            <string>Browse</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
+        <widget class="MantidQt::MantidWidgets::MWRunFiles" name="elwin_inputFile" >
+         <property name="findRunFiles" stdset="0" >
+          <bool>false</bool>
+         </property>
+         <property name="label" stdset="0" >
+          <string>Input File</string>
+         </property>
+         <property name="multipleFiles" stdset="0" >
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_3" >
@@ -409,6 +363,22 @@
           </widget>
          </item>
         </layout>
+       </item>
+       <item>
+        <spacer name="verticalSpacer_7" >
+         <property name="orientation" >
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeType" >
+          <enum>QSizePolicy::Expanding</enum>
+         </property>
+         <property name="sizeHint" stdset="0" >
+          <size>
+           <width>20</width>
+           <height>60</height>
+          </size>
+         </property>
+        </spacer>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout" >
@@ -482,66 +452,30 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_7" >
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_10" >
-         <item>
-          <widget class="QLabel" name="slice_lbInput" >
-           <property name="text" >
-            <string>Input File</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLineEdit" name="slice_leInputFile" />
-         </item>
-         <item>
-          <widget class="QLabel" name="slice_valInputFile" >
-           <property name="styleSheet" >
-            <string notr="true" >color: rgb(255, 0, 0);</string>
-           </property>
-           <property name="text" >
-            <string>*</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="slice_pbBrowse" >
-           <property name="text" >
-            <string>Browse</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
+        <widget class="MantidQt::MantidWidgets::MWRunFiles" name="slice_inputFile" >
+         <property name="findRunFiles" stdset="0" >
+          <bool>true</bool>
+         </property>
+         <property name="label" stdset="0" >
+          <string>Input File</string>
+         </property>
+         <property name="multipleFiles" stdset="0" >
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_12" >
-         <item>
-          <widget class="QLabel" name="slice_lbCalib" >
-           <property name="text" >
-            <string>Calibration File:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLineEdit" name="slice_leCalib" />
-         </item>
-         <item>
-          <widget class="QLabel" name="slice_valCalib" >
-           <property name="styleSheet" >
-            <string notr="true" >color: rgb(255, 0, 0);</string>
-           </property>
-           <property name="text" >
-            <string>*</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="slice_pbBrowseCalib" >
-           <property name="text" >
-            <string>Browse</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
+        <widget class="MantidQt::MantidWidgets::MWRunFiles" name="slice_calibFile" >
+         <property name="findRunFiles" stdset="0" >
+          <bool>false</bool>
+         </property>
+         <property name="label" stdset="0" >
+          <string>Calibration File</string>
+         </property>
+         <property name="multipleFiles" stdset="0" >
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item>
         <layout class="QGridLayout" name="gridLayout" >
@@ -696,35 +630,17 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_5" >
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_5" >
-         <item>
-          <widget class="QLabel" name="msd_lbInputFile" >
-           <property name="text" >
-            <string>Input File</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLineEdit" name="msd_leInputFile" />
-         </item>
-         <item>
-          <widget class="QLabel" name="msd_valInputFile" >
-           <property name="styleSheet" >
-            <string notr="true" >color: rgb(255, 0, 0);</string>
-           </property>
-           <property name="text" >
-            <string>*</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="msd_pbBrowse" >
-           <property name="text" >
-            <string>Browse</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
+        <widget class="MantidQt::MantidWidgets::MWRunFiles" name="msd_inputFile" >
+         <property name="findRunFiles" stdset="0" >
+          <bool>false</bool>
+         </property>
+         <property name="label" stdset="0" >
+          <string>Input File</string>
+         </property>
+         <property name="multipleFiles" stdset="0" >
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_6" >
@@ -883,35 +799,17 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_10" >
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_13" >
-         <item>
-          <widget class="QLabel" name="abs_lbFile" >
-           <property name="text" >
-            <string>Input File</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLineEdit" name="abs_leFile" />
-         </item>
-         <item>
-          <widget class="QLabel" name="abs_valFile" >
-           <property name="styleSheet" >
-            <string notr="true" >color: rgb(255, 0, 0);</string>
-           </property>
-           <property name="text" >
-            <string>*</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="abs_pbBrowse" >
-           <property name="text" >
-            <string>Browse</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
+        <widget class="MantidQt::MantidWidgets::MWRunFiles" name="abs_inputFile" >
+         <property name="findRunFiles" stdset="0" >
+          <bool>false</bool>
+         </property>
+         <property name="label" stdset="0" >
+          <string>Input File</string>
+         </property>
+         <property name="multipleFiles" stdset="0" >
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_4" >
@@ -1263,39 +1161,32 @@
  </widget>
  <customwidgets>
   <customwidget>
+   <class>MantidQt::MantidWidgets::MWRunFiles</class>
+   <extends>QWidget</extends>
+   <header>MantidQtMantidWidgets/MWRunFiles.h</header>
+  </customwidget>
+  <customwidget>
    <class>MantidQt::MantidWidgets::InstrumentSelector</class>
    <extends>QComboBox</extends>
    <header>MantidQtMantidWidgets/InstrumentSelector.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
-  <tabstop>fury_leIconFile</tabstop>
-  <tabstop>fury_pbBrowseIcon</tabstop>
-  <tabstop>fury_leResFile</tabstop>
-  <tabstop>fury_pbBrowseRes</tabstop>
   <tabstop>fury_leELow</tabstop>
   <tabstop>fury_leEWidth</tabstop>
   <tabstop>fury_leEHigh</tabstop>
   <tabstop>fury_ckSave</tabstop>
   <tabstop>fury_pbRun</tabstop>
-  <tabstop>elwin_leInputFile</tabstop>
-  <tabstop>elwin_pbBrowse</tabstop>
   <tabstop>elwin_leEStart</tabstop>
   <tabstop>elwin_leEEnd</tabstop>
   <tabstop>elwin_ckSave</tabstop>
   <tabstop>elwin_pbRun</tabstop>
-  <tabstop>slice_leInputFile</tabstop>
-  <tabstop>slice_pbBrowse</tabstop>
-  <tabstop>slice_leCalib</tabstop>
-  <tabstop>slice_pbBrowseCalib</tabstop>
   <tabstop>slice_leRange0</tabstop>
   <tabstop>slice_leRange1</tabstop>
   <tabstop>slice_leRange2</tabstop>
   <tabstop>slice_leRange3</tabstop>
   <tabstop>slice_ckSave</tabstop>
   <tabstop>slice_pbRun</tabstop>
-  <tabstop>msd_leInputFile</tabstop>
-  <tabstop>msd_pbBrowse</tabstop>
   <tabstop>msd_leStartX</tabstop>
   <tabstop>msd_leEndX</tabstop>
   <tabstop>msd_ckSave</tabstop>
@@ -1306,7 +1197,6 @@
   <tabstop>set_leSpecMin</tabstop>
   <tabstop>set_leSpecMax</tabstop>
   <tabstop>set_leEFixed</tabstop>
-  <tabstop>tabWidget</tabstop>
  </tabstops>
  <resources/>
  <connections/>
